@@ -1,13 +1,14 @@
 #!/usr/bin/make -f
 
-CFLAGS   = -MMD -Wall
-CFLAGS   += $(shell dpkg-buildflags --get CFLAGS)
-CPPFLAGS += $(shell dpkg-buildflags --get CPPFLAGS)
-CXXFLAGS =  $(shell dpkg-buildflags --get CXXFLAGS)
+# The build system doesn't use CPPFLAGS, pass them to CFLAGS/CXXFLAGS to
+# enable the missing (hardening) flags
+CFLAGS   += -MMD -Wall $(CPPFLAGS)
+CXXFLAGS += $(CPPFLAGS)
+
 UCFLAGS  = -MMD -Wall -g -Os
-LDFLAGS  =  $(shell dpkg-buildflags --get LDFLAGS)
+
 BINDIR   = /sbin
-V = 0
+V = 1
 
 DEB_BUILD_GNU_TYPE := $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 DEB_HOST_GNU_TYPE  := $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
@@ -15,7 +16,7 @@ ifneq ($(DEB_HOST_GNU_TYPE),$(DEB_BUILD_GNU_TYPE))
 	CC=$(DEB_HOST_GNU_TYPE)-gcc
 endif
 
-export CC CFLAGS CPPFLAGS CXXFLAGS LDFLAGS BINDIR V
+export CC BINDIR V
 
 DEB_HOST_ARCH_OS              ?= $(shell dpkg-architecture -qDEB_HOST_ARCH_OS)
 HOSTAPD_DOT_CONFIG            := debian/config/hostapd/$(DEB_HOST_ARCH_OS)
